Modify suggestions from TSE
- change functions declarations to ES6 arrow function syntax
- remove commented code
- center App element

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 .App {
   background-color: #f5f6fa;
   font-family: 'Montserrat', sans-serif !important;
+  margin: auto;
   text-align: center;
   width: 1200px;
 }
